diesel_compile_tests/tests/fail/distinct_on_clause_only_supported_for_pg.stderr
error[E0277]: the trait bound `DistinctOnClause<columns::name>: QueryFragment<Sqlite>` is not satisfied
  --> tests/fail/distinct_on_clause_only_supported_for_pg.rs:16:29
   |
16 |     users.distinct_on(name).get_results(&mut sqlite_connection);
   |                             ^^^^^^^^^^^ the trait `QueryFragment<Sqlite>` is not implemented for `DistinctOnClause<columns::name>`
   |
   = help: the following implementations were found:
             <DistinctOnClause<T> as QueryFragment<Pg>>
   = note: required because of the requirements on the impl of `QueryFragment<Sqlite, backend::sql_dialect::select_statement_syntax::AnsiSqlSelectStatement>` for `SelectStatement<FromClause<users::table>, diesel::query_builder::select_clause::DefaultSelectClause<FromClause<users::table>>, DistinctOnClause<columns::name>>`
   = note: 1 redundant requirements hidden
   = note: required because of the requirements on the impl of `QueryFragment<Sqlite>` for `SelectStatement<FromClause<users::table>, diesel::query_builder::select_clause::DefaultSelectClause<FromClause<users::table>>, DistinctOnClause<columns::name>>`
   = note: required because of the requirements on the impl of `LoadQuery<'_, diesel::SqliteConnection, _>` for `SelectStatement<FromClause<users::table>, diesel::query_builder::select_clause::DefaultSelectClause<FromClause<users::table>>, DistinctOnClause<columns::name>>`

error[E0277]: the trait bound `DistinctOnClause<columns::name>: QueryFragment<Mysql>` is not satisfied
  --> tests/fail/distinct_on_clause_only_supported_for_pg.rs:20:29
   |
20 |     users.distinct_on(name).get_results(&mut mysql_connection);
   |                             ^^^^^^^^^^^ the trait `QueryFragment<Mysql>` is not implemented for `DistinctOnClause<columns::name>`
   |
   = help: the following implementations were found:
             <DistinctOnClause<T> as QueryFragment<Pg>>
   = note: required because of the requirements on the impl of `QueryFragment<Mysql, backend::sql_dialect::select_statement_syntax::AnsiSqlSelectStatement>` for `SelectStatement<FromClause<users::table>, diesel::query_builder::select_clause::DefaultSelectClause<FromClause<users::table>>, DistinctOnClause<columns::name>>`
   = note: 1 redundant requirements hidden
   = note: required because of the requirements on the impl of `QueryFragment<Mysql>` for `SelectStatement<FromClause<users::table>, diesel::query_builder::select_clause::DefaultSelectClause<FromClause<users::table>>, DistinctOnClause<columns::name>>`
   = note: required because of the requirements on the impl of `LoadQuery<'_, diesel::MysqlConnection, _>` for `SelectStatement<FromClause<users::table>, diesel::query_builder::select_clause::DefaultSelectClause<FromClause<users::table>>, DistinctOnClause<columns::name>>`
